can add bangla place now app1 changed User can add/delete more images from profile

--- a/templates/app1/Story_view.html
+++ b/templates/app1/Story_view.html
@@ -147,7 +147,7 @@
                 element.off('submit');
                 var _id = element.attr("data-id");
                 $.ajax({
-                    url: '/app1/add_comment/',
+                    url: '/Home/add_comment/',
                     type: 'POST',
                     data: {
                         text: $('.text').val(),
@@ -178,7 +178,7 @@
             var totalLikeTxt = '#gp-total-like-' + _id;
 
             $.ajax({
-                url: '/app1/like',
+                url: '/Home/like',
                 type: 'GET',
                 data: {obj_id: _id},
                 dataType: "json",
