--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -70,7 +70,7 @@
                                 <h4 class="card-title">{{ page.name }}</h4>
                                 <p class="card-text">{{ page.des }}</p>
                                 <div class="gp-button-panel">
-                                    <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">View Tour Plan</a>
+                                    <a href="{% url 'story' page.division page.id %}" class="btn btn-primary">View Tour Plan</a>
                                 </div>
                             </div>
 
