--- a/templates/app1/story_share.html
+++ b/templates/app1/story_share.html
@@ -6,7 +6,7 @@
         <h1>Share your experience with others!</h1>
     </div>
     <div class="container-fluid gp-container-normal">
-        <form class="gp-form" role="form" id="story_form" method="post" action="" enctype="multipart/form-data">
+        <form class="gp-form" role="form" id="story_form" method="post" action="." enctype="multipart/form-data">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
