--- a/templates/app1/Story_view.html
+++ b/templates/app1/Story_view.html
@@ -90,6 +90,13 @@
                                 </p>
                                 <p class="gp-date">{{ comment.created_date }}</p>
                                 <p class="gp-content">{{ comment.text }}</p>
+                                {% if comment.id in comment_list %}
+                                    <div class="bg-margin-top-10">
+                                       <button class="btn btn-danger" onclick="del_comment( {{ 1}}, {{comment.id }})">
+                                            Delete
+                                        </button>
+                                    </div>
+                                {% endif %}
                             </div>
                         {% endfor %}
                     </div>
@@ -102,7 +109,8 @@
                         {% csrf_token %}
 
                         <div class="form-group">
-                            <textarea class="form-control text" rows="1" maxlength="1000" name="text" required=""></textarea>
+                            <textarea class="form-control text" rows="1" maxlength="1000" name="text"
+                                      required=""></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-default" onclick="commentDiv()">
@@ -138,6 +146,22 @@
             $("#" + divId).slideToggle();
         }
 
+
+        function del_comment(divId,CommentId){
+             $.ajax({
+                    url: '/Home/del_comment/',
+                    type: 'POST',
+                    data: {
+                        comment_id: CommentId,
+                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                    },
+                    success: function () {
+                        // alert("Created a New Comment");
+                        $("#" + divId).load(" #" + divId);
+                    }
+                });
+
+        }
 
         function commentDiv() {
 
