-Home fix -Profile theke story edit,image edit,delete -comment delete -recently shared stories added to home page -profile theke storyadd -Home page theke story add

--- a/templates/app1/add_page.html
+++ b/templates/app1/add_page.html
@@ -1,6 +1,6 @@
 {% extends 'app1/base.html' %}
 
-
+<!-- creating custom change list -->
 {% block body_block %}
 
     <div class="jumbotron gp-jumbotron">
