--- a/templates/app1/comment_add.html
+++ b/templates/app1/comment_add.html
@@ -10,3 +10,5 @@
         <button type="submit" class="btn btn-default">Send</button>
     </form>
 {% endblock %}
+
+<!-- creating custom change list -->
