--- a/templates/app1/forum.html
+++ b/templates/app1/forum.html
@@ -3,7 +3,7 @@
 {% block body_block %}
 
 
-    <div class="col-sm-4 gp-side-panel-container">
+    <div class="col-md-8 gp-side-panel-container">
 
         <div class="gp-side-panel">
             <div class="gp-side-panel-title">
