About Page Added

--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -1,6 +1,4 @@
 {% load staticfiles %}
-
-<!-- creating custom change list -->
 <!DOCTYPE html>
 
 <html lang="en">
@@ -20,6 +18,7 @@
         -->
 
     <link rel="stylesheet" href="{% static "app1/css/style.css" %}">
+    <link rel="stylesheet" href="{% static "app1/fonts/font-awesome/css/font-awesome.min.css" %}">
 
     <script src="{% static "app1/js/jquery-3.2.0.min.js" %}"></script>
 
